<resources>
    <string name="app_name">Колядник</string>
    <string name="jump_to_page_hint">Введіть номер сторінки</string>
    <string name="book_marks_name">Закладки</string>
    <string name="settings_name">Налаштування</string>
    <string name="horizontal_scroll_name">Горизонтальна прокрутка</string>
    <string name="page_by_page_name">Сторінка за сторінкою</string>
    <string name="jump_to_page_title">Перейдіть на сторінку</string>
    <string name="button_ok">ОК</string>
    <string name="button_cancel">Скасувати</string>
    <string name="page_number_error">Введіть дійсний номер</string>
    <string name="content_name">Зміст</string>
    <string name="literal_content_name">Алфавітний покажчик колядок</string>
    <string name="old_carols_name">Старосвітські колядки</string>
    <string name="viflaim_name">Вифлеємська п\'єса</string>
    <string name="songs_name">Перед-і по празничні пісні Рождества Христового</string>
    <string name="musical_notes_name">Нотний матеріал</string>
    <string name="jump_to_page_name">Перейти на сторінку</string>
    <string name="greetings_name">Вінчування</string>
</resources>
